# earth_obs_seg

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  todo.md
docs/: todo.md
earth_obs_seg/: train.py
earth_obs_seg/dataset/: dataset_hrmelt.py
earth_obs_seg/eval/: online_eval.py
earth_obs_seg/utils/: geospatial.py  utils.py
geospatial_unet_pytorch/: predict.py  train.py
geospatial_unet_pytorch/dataset/: dataset_hrmelt.py
geospatial_unet_pytorch/eval/: metrics.py  online_eval.py
geospatial_unet_pytorch/utils/: geospatial.py  utils.py
notebooks/: explore_data.ipynb
runs/unet_smp/demo_run/config/: config.yaml  test.csv  train.csv  val.csv
