[project]
name = "geospatial_unet_pytorch"
version = "0.1.0"
description = "Template repository for image-to-image translation tasks on geospatial, earth observation, or satellite data using unet"
authors = [
    {name = "Björn Lütjens", email = "your.email@example.com"},
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["geospatial_unet_pytorch"]

[tool.setuptools.dynamic]
# dependencies = {  file = ["requirements.txt"] }